# vibe

./: .gitignore  AGENTS.md  dev.sh  docker-compose.yml  package-lock.json  setup-env.bat  start.bat  start.sh
.github/workflows/: backend-go.yml  (+7 more)
backend/: .dockerignore  .env.example  chat.db  db.js.old  package-lock.json  package.json  server.js  tsconfig.json  valkey.js
backend-go/: .env.example  .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go  server-http.go  server-tcp.go  server-ws.go
backend-node/: .env.example  Dockerfile  README.md  format.js  index.js  package-lock.json  package.json  protocol-handler.js  server-http.js  server-tcp.js  server-ws.js  server.js  tsconfig.json  valkey.js  vibe.ts
backend-rust/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
backend-rust/fb/: vibe_generated.rs
backend-rust/src/: connection_manager.rs  db.rs  format.rs  handler_registry.rs  handlers.rs  kafka.rs  main.rs  protocol.rs  push.rs  snowflake.rs  tcp_server.rs  tracer.rs  types.rs  valkey.rs  ws_server.rs
flatbufflers/: build.ps1  build.sh
fluent-icons/: icon_results.json  icon_retries.json
frontend/: .env.example  Dockerfile  Dockerfile.preview  README.md  nginx.conf  package-lock.json  package.json  svelte.config.js  vite.config.js
landing/: .env.example  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
schema/: vibe.fbs
storage-server/: .dockerignore  .env.example  Dockerfile  README.md  classify.js  package-lock.json  package.json  server.js  storage.js
vibe-app/: package-lock.json  package.json
(+305 files in other folders)
