[package]
name = "vibe-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
socketioxide = "0.18.4"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio-postgres = { version = "0.7.18", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"] }
tower-http = { version = "0.7.0", features = ["cors", "fs"] }
dotenvy = "0.15.7"
uuid = { version = "1.23.4", features = ["v4"] }
sha2 = "0.11.0"
hex = "0.4.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
chrono = { version = "0.4.45", features = ["serde"] }
rand = "0.9"
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
tokio-stream = "0.1"
flatbuffers = "25.2.10"
web-push = "0.11"
base64 = "0.22"
